--- a/react-forms/src/index.scss
+++ b/react-forms/src/index.scss
@@ -18,3 +18,21 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0.5rem;
 }
+
+.success-message {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.toast {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
