--- a/react-router/src/component/App/index.scss
+++ b/react-router/src/component/App/index.scss
@@ -1,3 +1,13 @@
 .row-cols-3 > * {
   width: 32%
 }
+
+.container {
+  position: relative;
+}
+
+.page {
+  position: absolute;
+  left: 15px;
+  right: 15px;
+}
